--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 <body >
 	<a-scene embedded arjs>
-		<a-marker preset='hiro' id='marker-hiro' registerevents>
+		<a-marker-camera type='pattern' url='amarker.patt'></a-marker-camera>
+
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
