--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			marker.addEventListener('markerFound', function() {
 				var markerId = marker.id;
 				console.log('markerFound', markerId);
-        if(markerId == 'marker-hiro'){
+        if(markerId == 'marker-anna'){
           window.location.href="https://www.youtube.com";
         }
 			});
@@ -21,7 +21,7 @@
 
 <body >
 	<a-scene embedded arjs>
-		<a-marker-camera type='pattern' url='amarker.patt'></a-marker-camera>
+		<a-marker-camera type='pattern' id='marker-anna' url='amarker.patt'></a-marker-camera>
 
 		</a-marker>
 		<a-entity camera></a-entity>
