--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
 
 <body >
 	<a-scene embedded arjs>
-		<a-marker-camera type='pattern' id='marker-anna' url='amarker.patt'></a-marker-camera>
-
-		</a-marker>
-		<a-entity camera></a-entity>
+		<a-marker-camera type='pattern' id='marker-anna' patternUrl='amarker.patt'></a-marker-camera>
 	</a-scene>
 </body>
 </html>
