--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
 <body >
 	<a-scene embedded arjs>
-		<a-marker-camera type='pattern' id='marker-anna' patternUrl='amarker.patt'></a-marker-camera>
+		<a-marker type='pattern' id='marker' url='amarker.patt' registerevents>
+		</a-marker>
+		<a-entity camera ></a-entity>
 	</a-scene>
 </body>
 </html>
