--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			marker.addEventListener('markerFound', function() {
 				var markerId = marker.id;
 				console.log('markerFound', markerId);
-        if(markerId == 'marker-anna'){
+        if(markerId == 'marker'){
           window.location.href="https://www.youtube.com";
         }
 			});
