--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body >
 	<a-scene embedded arjs>
-		<a-marker type='pattern' id='marker' url='amarker.patt' registerevents>
+		<a-marker preset='custom' id='marker' url='amarker.patt' registerevents>
 		</a-marker>
 		<a-entity camera ></a-entity>
 	</a-scene>
