--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
 <body >
 	<a-scene embedded arjs>
-		<a-marker preset='custom' id='marker' url='amarker.patt' registerevents>
-		</a-marker>
-		<a-entity camera ></a-entity>
-	</a-scene>
+        <a-marker-camera preset='custom' type='pattern' url='https://github.com/AnnaMaMe/SchasnasBA/blob/master/amarker.patt' registerevents>
+</a-scene>
 </body>
 </html>
