--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body >
 	<a-scene embedded arjs>
-        <a-marker-camera preset='custom' type='pattern' url='https://github.com/AnnaMaMe/SchasnasBA/blob/master/amarker.patt' registerevents>
+        <a-marker-camera preset='custom' type='pattern' url='amarker.patt' registerevents>
 </a-scene>
 </body>
 </html>
