--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				var markerId = marker.id;
 				console.log('markerFound', markerId);
         if(markerId == 'marker'){
-          window.location.href="https://www.youtube.com";
+          window.location.href="https://annamame.github.io/SchasnasBA/video.mp4";
         }
 			});
 		}
@@ -21,7 +21,7 @@
 
 <body >
 	<a-scene embedded arjs>
-        <a-marker-camera preset='custom' type='pattern' url='amarker.patt' registerevents>
+        <a-marker-camera preset='custom' type='pattern' url='https://annamame.github.io/SchasnasBA/amarker.patt' registerevents>
 </a-scene>
 </body>
 </html>
