--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 <body >
 	<a-scene embedded arjs>
-        <a-marker-camera preset='custom' type='pattern' url='https://annamame.github.io/SchasnasBA/amarker.patt' registerevents>
+	<a-marker preset='custom' id='marker' url='https://annamame.github.io/SchasnasBA/amarker.patt' registerevents>
+        </a-marker>
 </a-scene>
 </body>
 </html>
