--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 	<a-scene embedded arjs>
 	<a-marker preset='custom' id='marker' url='https://annamame.github.io/SchasnasBA/amarker.patt' registerevents>
         </a-marker>
+	<a-entity camera ></a-entity>
+	
 </a-scene>
 </body>
 </html>
