--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <body >
 	<a-scene embedded arjs>
-	<a-marker preset='custom' id='marker' url='https://annamame.github.io/SchasnasBA/amarker.patt' registerevents>
-        </a-marker>
-	<a-entity camera ></a-entity>
+	<a-marker preset='hiro' id='marker-hiro' registerevents>
+	</a-marker>
+	<a-entity camera></a-entity>
 	
 </a-scene>
 </body>
