--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body >
 	<a-scene embedded arjs>
-	<a-marker preset='hiro' id='marker-hiro' registerevents>
+	<a-marker preset='hiro' id='marker' registerevents>
 	</a-marker>
 	<a-entity camera></a-entity>
 	
